OnDoubleClick issue on mobile screen issue resolved

--- a/src/styles.css
+++ b/src/styles.css
@@ -153,7 +153,10 @@ body {
     cursor: pointer;
     position: absolute;
     bottom: 10px;
-    left: 10px;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
   
 }
 
@@ -161,13 +164,23 @@ body {
     font-size: 14px;
 }
 .meme-text input{
-    padding: 15px;
+    display: inline;
+    padding: 7px;
     outline: none;
     border: 1.5px solid gray;
     color: gray;
     border-radius: 5px;
     width: 200px;
 
+}
+.meme-text button{
+    padding: 5px;
+    margin-left: 5px;
+    width: 20%;
+    background-color: #333;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 
